[tool.poetry]
name = "hw11"
version = "0.1.0"
description = ""
authors = ["Kiril Sheremeta <120675223+kirilsheremeta@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.99.0"}
uvicorn = {extras = ["standard"], version = "^0.22.0"}
alembic = "^1.11.1"
psycopg2 = "^2.9.6"
sqlalchemy = "^2.0.17"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
